--- a/give-me-that-one-more-time.html
+++ b/give-me-that-one-more-time.html
@@ -134,7 +134,7 @@
 <li>Read a book on the deck of a ocean liner at sea while sipping on frozen treats.</li>
 <li>I want to feel the evening ocean breeze on my face while eating dinner in Belize.</li>
 <li>One more <a href="https://en.wikipedia.org/wiki/Belikin">Belikin</a> Stout.</li>
-<li>I want to enjoy a cigar while watching the setting <a href="https://www.pinterest.com/pin/169096160978920217/">sun paints the Mexican mountains every color between purple and orange</a>.</li>
+<li>I want to enjoy a cigar while watching the setting <a href="https://www.pinterest.com/pin/169096160978920217/">sun paint the Mexican mountains every color between purple and orange</a>.</li>
 <li>Feel the sand between my toes while I belt out Karaoke at a Caribbean beach-side bar.</li>
 <li>The Dallas Symphony at Christmas.</li>
 <li>Sip lemon cello at <a href="http://www.josephsdowntown.com/index.html">Joseph's</a> after a fine meal. And maybe try the Sambuca this time.</li>
@@ -147,6 +147,7 @@
 <li>Coffee on a crisp, Seattle morning.</li>
 <li>I want one more order of Halal's from <a href="http://53rdand6th.com/">53rd &amp; 6th</a>.  The white AND the red sauce, please.</li>
 </ul>
+<p>Just give me that one more time.</p>
         </div><!-- /.entry-content -->
     </article>
 </section>
@@ -188,24 +189,19 @@
 </li>
 
 <li class="nav-header"><a href="./tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
+    <li class="tag-4">
+        <a href="./tag/women.html">
+            <i class="icon-tag icon-large"></i>women
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/protection.html">
+            <i class="icon-tag icon-large"></i>protection
+        </a>
+    </li>
     <li class="tag-1">
-        <a href="./tag/google.html">
-            <i class="icon-tag icon-large"></i>Google
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/.html">
-            <i class="icon-tag icon-large"></i>
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/respect.html">
-            <i class="icon-tag icon-large"></i>respect
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/security.html">
-            <i class="icon-tag icon-large"></i>security
+        <a href="./tag/automation.html">
+            <i class="icon-tag icon-large"></i>automation
         </a>
     </li>
     <li class="tag-4">
@@ -214,48 +210,13 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/five-pillars.html">
-            <i class="icon-tag icon-large"></i>five pillars
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/conference.html">
-            <i class="icon-tag icon-large"></i>conference
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/reflection.html">
-            <i class="icon-tag icon-large"></i>reflection
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/howto.html">
-            <i class="icon-tag icon-large"></i>HowTo
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/cleaning.html">
-            <i class="icon-tag icon-large"></i>cleaning
+        <a href="./tag/tropical.html">
+            <i class="icon-tag icon-large"></i>tropical
         </a>
     </li>
     <li class="tag-1">
         <a href="./tag/website.html">
             <i class="icon-tag icon-large"></i>website
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/cloud.html">
-            <i class="icon-tag icon-large"></i>cloud
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/wordpress.html">
-            <i class="icon-tag icon-large"></i>wordpress
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/music.html">
-            <i class="icon-tag icon-large"></i>music
         </a>
     </li>
     <li class="tag-4">
@@ -264,8 +225,83 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/relationships.html">
-            <i class="icon-tag icon-large"></i>relationships
+        <a href="./tag/traffic.html">
+            <i class="icon-tag icon-large"></i>traffic
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/voc.html">
+            <i class="icon-tag icon-large"></i>voc
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/strengths.html">
+            <i class="icon-tag icon-large"></i>strengths
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/playlist.html">
+            <i class="icon-tag icon-large"></i>playlist
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/modularity.html">
+            <i class="icon-tag icon-large"></i>modularity
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/lawn.html">
+            <i class="icon-tag icon-large"></i>lawn
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/five-pillars.html">
+            <i class="icon-tag icon-large"></i>five pillars
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/car.html">
+            <i class="icon-tag icon-large"></i>car
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/bookmark.html">
+            <i class="icon-tag icon-large"></i>bookmark
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/data.html">
+            <i class="icon-tag icon-large"></i>data
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/security.html">
+            <i class="icon-tag icon-large"></i>security
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/hangout.html">
+            <i class="icon-tag icon-large"></i>hangout
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/storage.html">
+            <i class="icon-tag icon-large"></i>storage
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/conference.html">
+            <i class="icon-tag icon-large"></i>conference
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/cleaning.html">
+            <i class="icon-tag icon-large"></i>cleaning
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/music.html">
+            <i class="icon-tag icon-large"></i>music
         </a>
     </li>
     <li class="tag-4">
@@ -274,8 +310,58 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/data.html">
-            <i class="icon-tag icon-large"></i>data
+        <a href="./tag/design.html">
+            <i class="icon-tag icon-large"></i>design
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/shopping.html">
+            <i class="icon-tag icon-large"></i>shopping
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/cloud.html">
+            <i class="icon-tag icon-large"></i>cloud
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/san-antonio.html">
+            <i class="icon-tag icon-large"></i>san antonio
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/launch.html">
+            <i class="icon-tag icon-large"></i>launch
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/light.html">
+            <i class="icon-tag icon-large"></i>light
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/drink.html">
+            <i class="icon-tag icon-large"></i>drink
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/housekeeping.html">
+            <i class="icon-tag icon-large"></i>housekeeping
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/.html">
+            <i class="icon-tag icon-large"></i>
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/learning.html">
+            <i class="icon-tag icon-large"></i>learning
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/wordpress.html">
+            <i class="icon-tag icon-large"></i>wordpress
         </a>
     </li>
     <li class="tag-4">
@@ -289,48 +375,8 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/women.html">
-            <i class="icon-tag icon-large"></i>women
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/launch.html">
-            <i class="icon-tag icon-large"></i>launch
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/lawn.html">
-            <i class="icon-tag icon-large"></i>lawn
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/playlist.html">
-            <i class="icon-tag icon-large"></i>playlist
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/housekeeping.html">
-            <i class="icon-tag icon-large"></i>housekeeping
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/voc.html">
-            <i class="icon-tag icon-large"></i>voc
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/traffic.html">
-            <i class="icon-tag icon-large"></i>traffic
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/shopping.html">
-            <i class="icon-tag icon-large"></i>shopping
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/learning.html">
-            <i class="icon-tag icon-large"></i>learning
+        <a href="./tag/reflection.html">
+            <i class="icon-tag icon-large"></i>reflection
         </a>
     </li>
     <li class="tag-4">
@@ -338,24 +384,19 @@
             <i class="icon-tag icon-large"></i>database
         </a>
     </li>
-    <li class="tag-1">
-        <a href="./tag/hangout.html">
-            <i class="icon-tag icon-large"></i>hangout
+    <li class="tag-4">
+        <a href="./tag/talent.html">
+            <i class="icon-tag icon-large"></i>talent
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/strengths.html">
-            <i class="icon-tag icon-large"></i>strengths
+        <a href="./tag/respect.html">
+            <i class="icon-tag icon-large"></i>respect
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/tropical.html">
-            <i class="icon-tag icon-large"></i>tropical
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/design.html">
-            <i class="icon-tag icon-large"></i>design
+        <a href="./tag/howto.html">
+            <i class="icon-tag icon-large"></i>HowTo
         </a>
     </li>
     <li class="tag-4">
@@ -363,54 +404,14 @@
             <i class="icon-tag icon-large"></i>yard work
         </a>
     </li>
-    <li class="tag-4">
-        <a href="./tag/bookmark.html">
-            <i class="icon-tag icon-large"></i>bookmark
-        </a>
-    </li>
     <li class="tag-1">
-        <a href="./tag/san-antonio.html">
-            <i class="icon-tag icon-large"></i>san antonio
+        <a href="./tag/google.html">
+            <i class="icon-tag icon-large"></i>Google
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/protection.html">
-            <i class="icon-tag icon-large"></i>protection
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/drink.html">
-            <i class="icon-tag icon-large"></i>drink
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/car.html">
-            <i class="icon-tag icon-large"></i>car
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/storage.html">
-            <i class="icon-tag icon-large"></i>storage
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/light.html">
-            <i class="icon-tag icon-large"></i>light
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/modularity.html">
-            <i class="icon-tag icon-large"></i>modularity
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/automation.html">
-            <i class="icon-tag icon-large"></i>automation
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/talent.html">
-            <i class="icon-tag icon-large"></i>talent
+        <a href="./tag/relationships.html">
+            <i class="icon-tag icon-large"></i>relationships
         </a>
     </li>
 
