--- a/my-three-favorite-strengths.html
+++ b/my-three-favorite-strengths.html
@@ -188,28 +188,38 @@
 
 <li class="nav-header"><a href="./tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
     <li class="tag-4">
+        <a href="./tag/security.html">
+            <i class="icon-tag icon-large"></i>security
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/learning.html">
+            <i class="icon-tag icon-large"></i>learning
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/.html">
+            <i class="icon-tag icon-large"></i>
+        </a>
+    </li>
+    <li class="tag-4">
         <a href="./tag/women.html">
             <i class="icon-tag icon-large"></i>women
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/protection.html">
-            <i class="icon-tag icon-large"></i>protection
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/automation.html">
-            <i class="icon-tag icon-large"></i>automation
+        <a href="./tag/yard-work.html">
+            <i class="icon-tag icon-large"></i>yard work
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/travel-reflection.html">
-            <i class="icon-tag icon-large"></i>travel reflection
+        <a href="./tag/howto.html">
+            <i class="icon-tag icon-large"></i>HowTo
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/tropical.html">
-            <i class="icon-tag icon-large"></i>tropical
+        <a href="./tag/coffee.html">
+            <i class="icon-tag icon-large"></i>coffee
         </a>
     </li>
     <li class="tag-1">
@@ -222,14 +232,124 @@
             <i class="icon-tag icon-large"></i>tv
         </a>
     </li>
+    <li class="tag-1">
+        <a href="./tag/conference.html">
+            <i class="icon-tag icon-large"></i>conference
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/google.html">
+            <i class="icon-tag icon-large"></i>Google
+        </a>
+    </li>
     <li class="tag-4">
-        <a href="./tag/traffic.html">
-            <i class="icon-tag icon-large"></i>traffic
+        <a href="./tag/housekeeping.html">
+            <i class="icon-tag icon-large"></i>housekeeping
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/talent.html">
+            <i class="icon-tag icon-large"></i>talent
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/bookmark.html">
+            <i class="icon-tag icon-large"></i>bookmark
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/wordpress.html">
+            <i class="icon-tag icon-large"></i>wordpress
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/drink.html">
+            <i class="icon-tag icon-large"></i>drink
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/protection.html">
+            <i class="icon-tag icon-large"></i>protection
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/san-antonio.html">
+            <i class="icon-tag icon-large"></i>san antonio
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/storage.html">
+            <i class="icon-tag icon-large"></i>storage
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/five-pillars.html">
+            <i class="icon-tag icon-large"></i>five pillars
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/launch.html">
+            <i class="icon-tag icon-large"></i>launch
         </a>
     </li>
     <li class="tag-4">
         <a href="./tag/voc.html">
             <i class="icon-tag icon-large"></i>voc
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/shopping.html">
+            <i class="icon-tag icon-large"></i>shopping
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/hangout.html">
+            <i class="icon-tag icon-large"></i>hangout
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/data.html">
+            <i class="icon-tag icon-large"></i>data
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/tropical.html">
+            <i class="icon-tag icon-large"></i>tropical
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/cleaning.html">
+            <i class="icon-tag icon-large"></i>cleaning
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/lawn.html">
+            <i class="icon-tag icon-large"></i>lawn
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/game.html">
+            <i class="icon-tag icon-large"></i>game
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/cloud.html">
+            <i class="icon-tag icon-large"></i>cloud
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/design.html">
+            <i class="icon-tag icon-large"></i>design
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/car.html">
+            <i class="icon-tag icon-large"></i>car
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/database.html">
+            <i class="icon-tag icon-large"></i>database
         </a>
     </li>
     <li class="tag-4">
@@ -242,59 +362,14 @@
             <i class="icon-tag icon-large"></i>playlist
         </a>
     </li>
-    <li class="tag-4">
-        <a href="./tag/modularity.html">
-            <i class="icon-tag icon-large"></i>modularity
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/lawn.html">
-            <i class="icon-tag icon-large"></i>lawn
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/five-pillars.html">
-            <i class="icon-tag icon-large"></i>five pillars
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/car.html">
-            <i class="icon-tag icon-large"></i>car
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/bookmark.html">
-            <i class="icon-tag icon-large"></i>bookmark
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/data.html">
-            <i class="icon-tag icon-large"></i>data
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/security.html">
-            <i class="icon-tag icon-large"></i>security
-        </a>
-    </li>
     <li class="tag-1">
-        <a href="./tag/hangout.html">
-            <i class="icon-tag icon-large"></i>hangout
+        <a href="./tag/reflection.html">
+            <i class="icon-tag icon-large"></i>reflection
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/storage.html">
-            <i class="icon-tag icon-large"></i>storage
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/conference.html">
-            <i class="icon-tag icon-large"></i>conference
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/cleaning.html">
-            <i class="icon-tag icon-large"></i>cleaning
+        <a href="./tag/respect.html">
+            <i class="icon-tag icon-large"></i>respect
         </a>
     </li>
     <li class="tag-1">
@@ -303,68 +378,23 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/game.html">
-            <i class="icon-tag icon-large"></i>game
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/design.html">
-            <i class="icon-tag icon-large"></i>design
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/shopping.html">
-            <i class="icon-tag icon-large"></i>shopping
+        <a href="./tag/travel.html">
+            <i class="icon-tag icon-large"></i>travel
         </a>
     </li>
     <li class="tag-1">
-        <a href="./tag/cloud.html">
-            <i class="icon-tag icon-large"></i>cloud
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/san-antonio.html">
-            <i class="icon-tag icon-large"></i>san antonio
+        <a href="./tag/automation.html">
+            <i class="icon-tag icon-large"></i>automation
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/launch.html">
-            <i class="icon-tag icon-large"></i>launch
+        <a href="./tag/traffic.html">
+            <i class="icon-tag icon-large"></i>traffic
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/light.html">
-            <i class="icon-tag icon-large"></i>light
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/drink.html">
-            <i class="icon-tag icon-large"></i>drink
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/housekeeping.html">
-            <i class="icon-tag icon-large"></i>housekeeping
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/.html">
-            <i class="icon-tag icon-large"></i>
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/learning.html">
-            <i class="icon-tag icon-large"></i>learning
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/wordpress.html">
-            <i class="icon-tag icon-large"></i>wordpress
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/coffee.html">
-            <i class="icon-tag icon-large"></i>coffee
+        <a href="./tag/modularity.html">
+            <i class="icon-tag icon-large"></i>modularity
         </a>
     </li>
     <li class="tag-4">
@@ -373,38 +403,8 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/reflection.html">
-            <i class="icon-tag icon-large"></i>reflection
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/database.html">
-            <i class="icon-tag icon-large"></i>database
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/talent.html">
-            <i class="icon-tag icon-large"></i>talent
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/respect.html">
-            <i class="icon-tag icon-large"></i>respect
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/howto.html">
-            <i class="icon-tag icon-large"></i>HowTo
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/yard-work.html">
-            <i class="icon-tag icon-large"></i>yard work
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/google.html">
-            <i class="icon-tag icon-large"></i>Google
+        <a href="./tag/light.html">
+            <i class="icon-tag icon-large"></i>light
         </a>
     </li>
     <li class="tag-4">
