--- a/archives.html
+++ b/archives.html
@@ -149,9 +149,9 @@
         </div><!--/span-->
         <div class="span3 well sidebar-nav" id="sidebar">
 <ul class="nav nav-list">
-<li class="nav-header"><h4><i class="icon-external-link"></i>blogroll</h4></li>
+<li class="nav-header"><h4><i class="icon-external-link"></i>links</h4></li>
     <li><div><i class="icon-external-link"></i><a href="http://billhertzing.com/">BillHertzing.com</a></div></li>
-    <li><div><i class="icon-external-link"></i><a href="https://www.google.com/#q=inurl:blog.billhertzing.com+">Search (Google)</a></div></li>
+    <li><div><i class="icon-external-link"></i><a href="https://www.google.com/#q=inurl:blog.billhertzing.com+">Search this site (Google)</a></div></li>
     <li><div><i class="icon-external-link"></i><a href="https://developer.rackspace.com/blog/">Developer Blog</a></div></li>
     <li><div><i class="icon-external-link"></i><a href="http://techblog.netflix.com/">Netflix Tech Blog</a></div></li>
 <li class="nav-header"><h4><i class="icon-home icon-large"></i> social</h4></li>
@@ -183,43 +183,13 @@
 
 <li class="nav-header"><a href="./tags.html"><h4><i class="icon-tags icon-large"></i>Tags</h4></a></li>
     <li class="tag-4">
-        <a href="./tag/five-pillars.html">
-            <i class="icon-tag icon-large"></i>five pillars
+        <a href="./tag/security.html">
+            <i class="icon-tag icon-large"></i>security
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/design.html">
-            <i class="icon-tag icon-large"></i>design
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/database.html">
-            <i class="icon-tag icon-large"></i>database
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/howto.html">
-            <i class="icon-tag icon-large"></i>HowTo
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/coffee.html">
-            <i class="icon-tag icon-large"></i>coffee
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/hangout.html">
-            <i class="icon-tag icon-large"></i>hangout
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/google.html">
-            <i class="icon-tag icon-large"></i>Google
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/tv.html">
-            <i class="icon-tag icon-large"></i>tv
+        <a href="./tag/launch.html">
+            <i class="icon-tag icon-large"></i>launch
         </a>
     </li>
     <li class="tag-1">
@@ -228,128 +198,8 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/travel.html">
-            <i class="icon-tag icon-large"></i>travel
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/housekeeping.html">
-            <i class="icon-tag icon-large"></i>housekeeping
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/strengths.html">
-            <i class="icon-tag icon-large"></i>strengths
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/launch.html">
-            <i class="icon-tag icon-large"></i>launch
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/car.html">
-            <i class="icon-tag icon-large"></i>car
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/talent.html">
-            <i class="icon-tag icon-large"></i>talent
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/music.html">
-            <i class="icon-tag icon-large"></i>music
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/reflection.html">
-            <i class="icon-tag icon-large"></i>reflection
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/light.html">
-            <i class="icon-tag icon-large"></i>light
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/voc.html">
-            <i class="icon-tag icon-large"></i>voc
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/respect.html">
-            <i class="icon-tag icon-large"></i>respect
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/wordpress.html">
-            <i class="icon-tag icon-large"></i>wordpress
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/protection.html">
-            <i class="icon-tag icon-large"></i>protection
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/texas.html">
-            <i class="icon-tag icon-large"></i>texas
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/cloud.html">
-            <i class="icon-tag icon-large"></i>cloud
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/tropical.html">
-            <i class="icon-tag icon-large"></i>tropical
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/bookmark.html">
-            <i class="icon-tag icon-large"></i>bookmark
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/automation.html">
-            <i class="icon-tag icon-large"></i>automation
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/security.html">
-            <i class="icon-tag icon-large"></i>security
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/drink.html">
-            <i class="icon-tag icon-large"></i>drink
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/data.html">
-            <i class="icon-tag icon-large"></i>data
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/bakery.html">
-            <i class="icon-tag icon-large"></i>bakery
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/modularity.html">
-            <i class="icon-tag icon-large"></i>modularity
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/storage.html">
-            <i class="icon-tag icon-large"></i>storage
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/photo.html">
-            <i class="icon-tag icon-large"></i>photo
+        <a href="./tag/shopping.html">
+            <i class="icon-tag icon-large"></i>shopping
         </a>
     </li>
     <li class="tag-4">
@@ -358,33 +208,88 @@
         </a>
     </li>
     <li class="tag-4">
+        <a href="./tag/relationships.html">
+            <i class="icon-tag icon-large"></i>relationships
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/data.html">
+            <i class="icon-tag icon-large"></i>data
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/san-antonio.html">
+            <i class="icon-tag icon-large"></i>san antonio
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/talent.html">
+            <i class="icon-tag icon-large"></i>talent
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/strengths.html">
+            <i class="icon-tag icon-large"></i>strengths
+        </a>
+    </li>
+    <li class="tag-4">
         <a href="./tag/cleaning.html">
             <i class="icon-tag icon-large"></i>cleaning
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/game.html">
-            <i class="icon-tag icon-large"></i>game
+        <a href="./tag/modularity.html">
+            <i class="icon-tag icon-large"></i>modularity
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/women.html">
-            <i class="icon-tag icon-large"></i>women
-        </a>
-    </li>
-    <li class="tag-4">
-        <a href="./tag/.html">
-            <i class="icon-tag icon-large"></i>
-        </a>
-    </li>
-    <li class="tag-1">
-        <a href="./tag/conference.html">
-            <i class="icon-tag icon-large"></i>conference
+        <a href="./tag/respect.html">
+            <i class="icon-tag icon-large"></i>respect
         </a>
     </li>
     <li class="tag-4">
         <a href="./tag/yard-work.html">
             <i class="icon-tag icon-large"></i>yard work
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/bakery.html">
+            <i class="icon-tag icon-large"></i>bakery
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/voc.html">
+            <i class="icon-tag icon-large"></i>voc
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/five-pillars.html">
+            <i class="icon-tag icon-large"></i>five pillars
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/bookmark.html">
+            <i class="icon-tag icon-large"></i>bookmark
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/howto.html">
+            <i class="icon-tag icon-large"></i>HowTo
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/car.html">
+            <i class="icon-tag icon-large"></i>car
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/protection.html">
+            <i class="icon-tag icon-large"></i>protection
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/hangout.html">
+            <i class="icon-tag icon-large"></i>hangout
         </a>
     </li>
     <li class="tag-1">
@@ -393,23 +298,28 @@
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/shopping.html">
-            <i class="icon-tag icon-large"></i>shopping
+        <a href="./tag/game.html">
+            <i class="icon-tag icon-large"></i>game
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/tv.html">
+            <i class="icon-tag icon-large"></i>tv
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/traffic.html">
-            <i class="icon-tag icon-large"></i>traffic
+        <a href="./tag/design.html">
+            <i class="icon-tag icon-large"></i>design
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/relationships.html">
-            <i class="icon-tag icon-large"></i>relationships
+        <a href="./tag/housekeeping.html">
+            <i class="icon-tag icon-large"></i>housekeeping
         </a>
     </li>
     <li class="tag-4">
-        <a href="./tag/learning.html">
-            <i class="icon-tag icon-large"></i>learning
+        <a href="./tag/tropical.html">
+            <i class="icon-tag icon-large"></i>tropical
         </a>
     </li>
     <li class="tag-4">
@@ -418,8 +328,98 @@
         </a>
     </li>
     <li class="tag-1">
-        <a href="./tag/san-antonio.html">
-            <i class="icon-tag icon-large"></i>san antonio
+        <a href="./tag/wordpress.html">
+            <i class="icon-tag icon-large"></i>wordpress
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/women.html">
+            <i class="icon-tag icon-large"></i>women
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/automation.html">
+            <i class="icon-tag icon-large"></i>automation
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/google.html">
+            <i class="icon-tag icon-large"></i>Google
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/music.html">
+            <i class="icon-tag icon-large"></i>music
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/drink.html">
+            <i class="icon-tag icon-large"></i>drink
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/cloud.html">
+            <i class="icon-tag icon-large"></i>cloud
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/conference.html">
+            <i class="icon-tag icon-large"></i>conference
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/texas.html">
+            <i class="icon-tag icon-large"></i>texas
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/.html">
+            <i class="icon-tag icon-large"></i>
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/traffic.html">
+            <i class="icon-tag icon-large"></i>traffic
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/travel.html">
+            <i class="icon-tag icon-large"></i>travel
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/storage.html">
+            <i class="icon-tag icon-large"></i>storage
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/light.html">
+            <i class="icon-tag icon-large"></i>light
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/coffee.html">
+            <i class="icon-tag icon-large"></i>coffee
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/photo.html">
+            <i class="icon-tag icon-large"></i>photo
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/learning.html">
+            <i class="icon-tag icon-large"></i>learning
+        </a>
+    </li>
+    <li class="tag-4">
+        <a href="./tag/database.html">
+            <i class="icon-tag icon-large"></i>database
+        </a>
+    </li>
+    <li class="tag-1">
+        <a href="./tag/reflection.html">
+            <i class="icon-tag icon-large"></i>reflection
         </a>
     </li>
 
